--- a/case2/vw_election.html
+++ b/case2/vw_election.html
@@ -94,7 +94,8 @@
        </ul>
     </nav>
    
-   <section></section>
+   <section>
+   </section>
    
    <footer>
       <p>VoterWeb &copy; 2018 All Rights Reserved</p>
