not finished with case 4

--- a/case4/hg_game.html
+++ b/case4/hg_game.html
@@ -90,8 +90,12 @@
         </ul>                                                                                                                                                                   
       </nav>
       
-      <article></article>      
-      <aside></aside>
+      <article>
+
+      </article>      
+      <aside>
+         
+      </aside>
    </section>
    
    <footer>
